examples/ui/1913-ui-root-typed-return.sx
// R1: the root is a TYPED RETURN — a `-> View` body whose last statement
// discards its value (the `;`) fails to compile with a targeted fix-it.
// No runtime arity check exists or is needed: the type system carries the
// root contract (G0 pass-2 tightening).
#import "modules/std.sx";
#import "modules/ui/compose.sx";
#import "modules/ui/view.sx";

home :: () -> View {
    text("content");    // error: the root's value is discarded by this ';'
}

main :: () {
    u := Ui.{};
    push .{ ui = *u } {
        home();
    }
}
